k8s/service-mesh/07-ingress-bridge-staging.yaml
apiVersion: v1
kind: Service
metadata:
  name: istio-ingressgateway-bridge
  namespace: staging
spec:
  type: ExternalName
  externalName: istio-ingressgateway.service-mesh.svc.cluster.local
  ports:
    - name: http
      port: 80
      targetPort: 80
