k8s/service-mesh/06-istio-gateway-staging.yaml
apiVersion: networking.istio.io/v1
kind: Gateway
metadata:
  name: staging-yas-public-gateway
  namespace: staging
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - staging.storefront.yas.local.com
        - staging.backoffice.yas.local.com
---
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: storefront-public
  namespace: staging
spec:
  hosts:
    - staging.storefront.yas.local.com
  gateways:
    - staging-yas-public-gateway
  http:
    - route:
        - destination:
            host: storefront-bff.staging.svc.cluster.local
            port:
              number: 80
---
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: backoffice-public
  namespace: staging
spec:
  hosts:
    - staging.backoffice.yas.local.com
  gateways:
    - staging-yas-public-gateway
  http:
    - route:
        - destination:
            host: backoffice-bff.staging.svc.cluster.local
            port:
              number: 80
