k8s/service-mesh/04-authorization-policies-staging.yaml
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: staging-default-deny
  namespace: staging
spec: {}
---
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: allow-health-probes
  namespace: staging
spec:
  action: ALLOW
  rules:
    - to:
        - operation:
            methods: ["GET"]
            paths:
              - /actuator/health
              - /actuator/health/*
---
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: allow-istio-ingress-to-storefront-bff
  namespace: staging
spec:
  action: ALLOW
  selector:
    matchLabels:
      app.kubernetes.io/name: storefront-bff
  rules:
    - from:
        - source:
            principals:
              - cluster.local/ns/service-mesh/sa/istio-ingressgateway-service-account
---
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: allow-istio-ingress-to-backoffice-bff
  namespace: staging
spec:
  action: ALLOW
  selector:
    matchLabels:
      app.kubernetes.io/name: backoffice-bff
  rules:
    - from:
        - source:
            principals:
              - cluster.local/ns/service-mesh/sa/istio-ingressgateway-service-account
---
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: allow-storefront-bff-to-storefront-ui
  namespace: staging
spec:
  action: ALLOW
  selector:
    matchLabels:
      app.kubernetes.io/name: storefront-ui
  rules:
    - from:
        - source:
            principals:
              - cluster.local/ns/staging/sa/storefront-bff
---
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: allow-backoffice-bff-to-backoffice-ui
  namespace: staging
spec:
  action: ALLOW
  selector:
    matchLabels:
      app.kubernetes.io/name: backoffice-ui
  rules:
    - from:
        - source:
            principals:
              - cluster.local/ns/staging/sa/backoffice-bff
---
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: allow-to-product
  namespace: staging
spec:
  action: ALLOW
  selector:
    matchLabels:
      app.kubernetes.io/name: product
  rules:
    - from:
        - source:
            principals:
              - cluster.local/ns/staging/sa/storefront-bff
              - cluster.local/ns/staging/sa/backoffice-bff
              - cluster.local/ns/staging/sa/cart
              - cluster.local/ns/staging/sa/inventory
              - cluster.local/ns/staging/sa/order
              - cluster.local/ns/staging/sa/search
              - cluster.local/ns/staging/sa/mesh-curl-allowed
---
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: allow-to-media
  namespace: staging
spec:
  action: ALLOW
  selector:
    matchLabels:
      app.kubernetes.io/name: media
  rules:
    - from:
        - source:
            principals:
              - cluster.local/ns/staging/sa/storefront-bff
              - cluster.local/ns/staging/sa/backoffice-bff
              - cluster.local/ns/staging/sa/cart
              - cluster.local/ns/staging/sa/product
---
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: allow-to-inventory
  namespace: staging
spec:
  action: ALLOW
  selector:
    matchLabels:
      app.kubernetes.io/name: inventory
  rules:
    - from:
        - source:
            principals:
              - cluster.local/ns/staging/sa/storefront-bff
              - cluster.local/ns/staging/sa/backoffice-bff
---
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: allow-to-cart
  namespace: staging
spec:
  action: ALLOW
  selector:
    matchLabels:
      app.kubernetes.io/name: cart
  rules:
    - from:
        - source:
            principals:
              - cluster.local/ns/staging/sa/storefront-bff
              - cluster.local/ns/staging/sa/backoffice-bff
              - cluster.local/ns/staging/sa/order
---
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: allow-to-customer
  namespace: staging
spec:
  action: ALLOW
  selector:
    matchLabels:
      app.kubernetes.io/name: customer
  rules:
    - from:
        - source:
            principals:
              - cluster.local/ns/staging/sa/storefront-bff
              - cluster.local/ns/staging/sa/backoffice-bff
              - cluster.local/ns/staging/sa/order
---
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: allow-to-order
  namespace: staging
spec:
  action: ALLOW
  selector:
    matchLabels:
      app.kubernetes.io/name: order
  rules:
    - from:
        - source:
            principals:
              - cluster.local/ns/staging/sa/storefront-bff
              - cluster.local/ns/staging/sa/backoffice-bff
---
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: allow-to-tax
  namespace: staging
spec:
  action: ALLOW
  selector:
    matchLabels:
      app.kubernetes.io/name: tax
  rules:
    - from:
        - source:
            principals:
              - cluster.local/ns/staging/sa/storefront-bff
              - cluster.local/ns/staging/sa/backoffice-bff
              - cluster.local/ns/staging/sa/order
---
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: allow-to-search
  namespace: staging
spec:
  action: ALLOW
  selector:
    matchLabels:
      app.kubernetes.io/name: search
  rules:
    - from:
        - source:
            principals:
              - cluster.local/ns/staging/sa/storefront-bff
              - cluster.local/ns/staging/sa/backoffice-bff
---
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: allow-to-sampledata
  namespace: staging
spec:
  action: ALLOW
  selector:
    matchLabels:
      app.kubernetes.io/name: sampledata
  rules:
    - from:
        - source:
            principals:
              - cluster.local/ns/staging/sa/storefront-bff
              - cluster.local/ns/staging/sa/backoffice-bff
